# aptlinex

last_upload/: aptlinex_0.9-1.dsc  aptlinex_0.9-1_amd64.changes  aptlinex_0.9-1_amd64.upload  aptlinex_0.91-1.dsc  aptlinex_0.91-1_all.deb  aptlinex_0.91-1_amd64.changes  aptlinex_0.91-1_amd64.upload
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  PROJECTS  apt.conf.autoinstall  aptlinex.protocol  aptlinex.schemas  autogen.sh  configure  configure.ac
src/debian/: aptlinex.lintian-overrides  changelog  control  copyright  dirs  gambas-apt.gambas.1  install  postinst  postrm  prerm  rules
src/gambas-apt/: .project  .settings  FExec.form  FMain.form  ModMain.module  PkgName.module
src/gambas-apt/.lang/: es.po
